[Fix] Remove border collapse to make sure border radius work

--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -5,7 +5,7 @@
 		table-layout: fixed;
 		border: 1px solid $table--border-color;
 		border-radius: $border-radius;
-		border-collapse: collapse;
+		//border-collapse: collapse;
 		border-spacing: unset;
 		border-radius: 5px;
 		color: $table--text-color;
